frontend/test/should_pass/edge_model_003.gm
edge class A extends Edge, AEdge;