frontend/test/should_fail/edge_model_002.gm
undirected edge class A extends Edge;